# cove

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  go.mod  go.sum  main.go
.github/workflows/: release.yml
docs/: API.md
electron/: electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json
electron/src/lib/: api.ts  utils.ts
electron/src/main/: index.ts
electron/src/preload/: index.d.ts  index.ts
flatpak/: io.github.arcadyi.Cove.yml  io.github.coveninja.Cove.metainfo.xml  io.github.coveninja.Cove.yml
internal/addons/: addon.go  addon_test.go  justwatch.go  manager.go  quality.go  quality_test.go
internal/discover/: discover.go  discover_test.go
internal/nuvio/: repo.go  repo_test.go  runtime.go  runtime_test.go  vendored_test.go  weburl_test.go
internal/player/: ffmpeg.go  hls.go  player.go
internal/profiles/: profiles.go
internal/settings/: settings.go
internal/supabase/: client.go  handlers.go  noop.go  sync.go
internal/tmdb/: tmdb.go
internal/updater/: updater.go  updater_test.go
internal/utils/: atomic.go  main.go  safedialer.go  utils_test.go
packaging/: PKGBUILD
packaging/windows/: cove.nsi
qt/: CMakeLists.txt  resources.qrc
qt/qml/: main.qml
qt/resources/: cove.rc
qt/src/: MpvObject.cpp  MpvObject.h  main.cpp
scripts/: dev-hot.sh
web/: .eslintcache  eslint.config.js  package-lock.json  package.json  vite.config.ts
web/src/: App.svelte  main.ts
web/src/assets/: CoveIcon.svelte  app.css
web/src/components/: ContinueWatching.svelte  EpisodeCard.svelte  MediaCard.svelte  (+9 more)
(+41 files in other folders)
